fix: eventListener function change and scrollBar change

--- a/blocks/popup/__submit-button/popup__submit-button.css
+++ b/blocks/popup/__submit-button/popup__submit-button.css
@@ -8,7 +8,6 @@
   background-color: #000000;
   padding: 14px 0 18px 0;
   border-radius: 2px;
-  border: none;
   transition: 0.2s;
   border: 1px solid white;
 }
